Fix some memory leaks [cppcheck]

Signed-off-by: Boris Egorov <egorov@linux.com>

https://bugzilla.gnome.org/show_bug.cgi?id=740382